# typst.nvim

./: .gitignore  Cargo.toml  README.md  install.sh  justfile
ftdetect/: typst.vim
queries/typst/: highlights.scm
src/: config.rs  lib.rs
